--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,26 @@ h1 {
     margin: 0 auto;
     padding: 2.5rem;
 }
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-index {
+    font-size: 2.5rem;
+    padding: 2.2rem 0;
+    width: 31rem;
+    text-align: center;
+    margin-bottom: 1.1rem;
+    text-decoration: none;
+    color: whitesmoke;
+    background: linear-gradient(310de, rgb(104 21 8 / 0%) 0%, rgb(235 188 192) 100%);
+    border-radius: 5px;
+    margin-left: 5rem;
+}
