--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,12 @@ h1 {
     margin-bottom: 1.1rem;
     text-decoration: none;
     color: whitesmoke;
-    background: linear-gradient(310de, rgb(104 21 8 / 0%) 0%, rgb(235 188 192) 100%);
+    background: linear-gradient(310deg, rgb(104 21 8 / 0%) 0%, rgb(235 188 192) 100%);
     border-radius: 5px;
     margin-left: 5rem;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: 0 0.5rem 1.rem 0 rgba(219, 214, 203, 0.7);
 }
