--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,13 @@ h1 {
     margin-left: 5rem;
 }
 
+.btn-index:hover {
+    cursor: pointer;
+    box-shadow: 0 0.5rem 1.3rem 0 rgba(219, 214, 203, 0.7);
+    transition: transform 160ms;
+    transform: scale(1.04);
+}
+
 .btn:hover {
     cursor: pointer;
     box-shadow: 0 0.5rem 1.rem 0 rgba(219, 214, 203, 0.7);
