--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,3 +64,32 @@ h1 {
     cursor: pointer;
     box-shadow: 0 0.5rem 1.rem 0 rgba(219, 214, 203, 0.7);
 }
+
+#hud {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hud-prefix {
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.hud-main-text {
+    text-align: center;
+}
+
+#progressBar {
+    width: 19rem;
+    height: 3rem;
+    border: 0.3rem solid rgb(255, 255, 0);
+    margin-top: 1.8rem;
+    border-radius: 3.5rem;
+    overflow: hidden;
+}
+
+#progressBarFull {
+    height: 100%;
+    background: rgb(255, 255, 0);
+    width: 0%;
+}
