Add style to container-leaderbor/button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,14 @@ h1 {
     background: rgb(255, 255, 0);
     width: 0%;
 }
+
+.container-leaderboard, .container-leaderboard-button {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 75rem;
+    margin: 0 auto;
+    padding: 2.5rem;
+}
