--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,18 @@ h1 {
     box-shadow: 0 0.5rem 1.rem 0 rgba(219, 214, 203, 0.7);
 }
 
+.btn {
+    font-size: 2.5rem;
+    padding: 2.2rem 0;
+    width: 31rem;
+    text-align: center;
+    margin-bottom: 1.1rem;
+    text-decoration: none;
+    color: whitesmoke;
+    background: linear-gradient(310deg, rgb(104 21 8 / 0%) 0%, rgb(235 188 192) 100%);
+    border-radius: 5px;
+}
+
 #hud {
     display: flex;
     justify-content: space-between;
