--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,3 +116,28 @@ h1 {
     margin: 0 auto;
     padding: 2.5rem;
 }
+
+.choice-container {
+    display: flex;
+    margin-bottom: 0.9rem;
+    width: 100%;
+    border-radius: 5px;
+    font-size: 2.8rem;
+    min-width: 78rem;
+    background: rgb(124 109 87);
+}
+
+.choice-container:hover {
+    cursor: pointer;
+    box-shadow: 0 0.5rem 1.3rem 0 rgb(126, 112, 92, 0.7);
+    transform: scale(1.04);
+}
+
+.choice-prefix {
+    padding: 1.8rem 2.5rem;
+}
+
+.choice-text {
+    padding: 1.8rem;
+    width: 100%;
+}
