--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,3 +141,25 @@ h1 {
     padding: 1.8rem;
     width: 100%;
 }
+
+form {
+    margin-bottom: 1rem;
+    width: 30rem;
+    padding: 1.9rem 0;
+    font-size: 2rem;
+    text-align: center;
+}
+
+form > input {
+    margin-bottom: 1rem;
+    width: 30rem;
+    padding: 1.9rem 0;
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 3rem;
+    color: black;
+}
+
+#leaderboard {
+    font-size: 2.5rem;
+}
