--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,3 +189,29 @@ form > input {
         transform: scale(1.02);
     }
 }
+
+@media screen and (max-width: 600px) {
+    
+    :root {
+        background-color: rgb(20, 17, 18);
+        font-size: 56%;
+    }
+    
+    #question {
+        font-size: 2.5rem
+    }
+    
+    .choice-text {
+        font-size: 2rem
+    }
+}
+
+@media screen and (max-width: 280px) {
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-family: 'ZCOOL XiaoWei', serif;
+        font-size: large;
+    }
+}
