--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ h1 {
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: 0 0.5rem 1.rem 0 rgba(219, 214, 203, 0.7);
+    box-shadow: 0 0.5rem 1.3rem 0 rgba(219, 214, 203, 0.7);
 }
 
 .btn {
