Add image folder to assets folder and added images in it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:'ZCOOL XiaoWei', serif; ;
+    font-family:'ZCOOL XiaoWei', serif; 
     color: white;
 }
 
